--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
   "name": "ic_guestbook_assets",
   "version": "0.1.0",
   "description": "",
-  "keywords": [],
+  "keywords": [
+    "Internet Computer",
+    "Motoko",
+    "JavaScript",
+    "Canister"
+  ],
   "scripts": {
-    "build": "webpack"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "prebuild": "npm run copy:types",
+    "start": "webpack serve --mode development --env development",
+    "prestart": "npm run copy:types",
+    "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "",
+    "@dfinity/agent": "0.9.2",
+    "@dfinity/candid": "0.9.2",
+    "@dfinity/principal": "0.9.2",
+    "@vue/cli": "^4.5.13",
+    "@vue/cli-service": "^5.0.0-beta.2",
+    "@vue/compiler-sfc": "^3.1.5",
     "assert": "2.0.0",
     "buffer": "6.0.3",
+    "copy-webpack-plugin": "^9.0.1",
     "events": "3.3.0",
     "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
@@ -17,6 +34,33 @@
     "terser-webpack-plugin": "5.1.1",
     "util": "0.12.3",
     "webpack": "5.24.4",
-    "webpack-cli": "4.5.0"
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "last 2 chrome version",
+    "last 2 firefox version",
+    "last 2 safari version",
+    "last 2 edge version"
+  ],
+  "dependencies": {
+    "vue": "^3.1.5"
   }
 }
